//
//  GBShopUITests.swift
//  GBShopUITests
//
//  Created by LACKY on 25.03.2022.
//

import XCTest

class GBShopUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
    
    func testSuccessfulLogin() throws {
        let app = XCUIApplication()
        app.launch()
        app.otherElements.buttons["Войти"].tap()
    }
    
    func testFailedLogin() throws {
        let app = XCUIApplication()
        app.launch()
        let element = app.otherElements
        element.textFields["Введите пароль"].clearAndEnterText(text: "неправильный пароль")
        app.otherElements.buttons["Войти"].tap()
        app.alerts["Ошибка авторизации"].scrollViews.otherElements.buttons["Ок("].tap()
    }
}

extension XCUIElement {
    func clearAndEnterText(text: String) {
        guard let stringValue = self.value as? String else {
            XCTFail("Очистить и ввести текст")
            return
        }
        
        self.tap()
        let deleteString = String(repeating: XCUIKeyboardKey.delete.rawValue, count: stringValue.count)
        self.typeText(deleteString)
        self.typeText(text)
    }
}
